tests/neg-custom-args/captures/effect-swaps.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/effect-swaps.scala:62:8 ----------------------------------
61 |      Result:
62 |        Future: // error, type mismatch
   |      ^
   |      Found:    Result.Ok[box Future[box T^?]^{fr, contextual$1}]
   |      Required: Result[Future[T], Nothing]
63 |          fr.await.ok
   |--------------------------------------------------------------------------------------------------------------------
   |Inline stack trace
   |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   |This location contains code that was inlined from effect-swaps.scala:39
39 |    boundary(Ok(body))
   |             ^^^^^^^^
    --------------------------------------------------------------------------------------------------------------------
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/effect-swaps.scala:72:10 ---------------------------------
72 |          Future: fut ?=> // error: type mismatch
   |          ^
   |          Found:    Future[box T^?]^{fr, lbl}
   |          Required: Future[box T^?]^?
73 |            fr.await.ok
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/effect-swaps.scala:66:15 ------------------------------------------------------
66 |        Result.make: // error
   |        ^^^^^^^^^^^
   |        escaping local reference contextual$9.type
